--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Maisha Mariam Meem Will You Be My Valentine? ❤️</title>
+<title>Valentine Proposal ❤️</title>
 
 <style>
 
@@ -71,7 +71,8 @@ button{
 
 <div class="container">
 
-<h1>Will You Be My Valentine? ❤️</h1>
+<h1> Maisha Mariam Meem </h1>
+ <h1> Will You Be My Valentine? ❤️</h1>  
 
 <div class="buttons">
 <button id="yesBtn">YES 💖</button>
